Fix mobile keyboard scrollbar

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -29,3 +29,7 @@ li{
     stroke: currentColor;
     fill: currentColor;
 }
+
+form::-webkit-scrollbar {
+    display: none;
+}
